# lt02_weekly_schedule

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
exoschedule/: __init__.py  analysis.py  exoplanets.json  functions.py  last_check.json  schedule.py  stars.json  test_dev.ipynb
tests/: test_exoschedule.py
tests/test_data/: 2025-01-21_booking.csv
